<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_box"
    android:backgroundTint="@color/background_title_color"
    app:layout_constraintBaseline_toTopOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent">
    <LinearLayout
        android:id="@+id/fadLLCityNameInput"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text="@string/FragmentAddcityDialog_CityName"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:singleLine="true">
        </TextView>
        <EditText
            android:id="@+id/fAdEtCityName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/white"
            android:padding="10dp"
            android:textColor="@color/white"
            android:maxLines="1"
            tools:ignore="Autofill,LabelFor,TextFields">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/fadLLCityNameInput"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fAdBtnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_box"
            app:backgroundTint="@color/background_fad_button_add"
            android:text="@string/FragmentAddcityDialog_Confirm"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:padding="10dp">
        </androidx.appcompat.widget.AppCompatButton>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fAdBtnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_box"
            app:backgroundTint="@color/background_fad_button_cancel"
            android:text="@string/FragmentAddcityDialog_Cancel"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:padding="10dp">
        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>