<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/amLlBackgroundImg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/img_main_background_day"
    tools:context=".activities.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/amTvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ActivityMain_Title"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_margin="18dp"/>
        <LinearLayout
            android:id="@+id/amLlCurrentLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/rounded_box"
            android:backgroundTint="@color/background_title_color"
            android:alpha="0.9"
            android:padding="10dp">
            <TextView
                android:id="@+id/amTvCurrentLocationText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|center"
                android:text="@string/ActivityMain_CurrentLocationText"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:shadowColor="#000000"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="10"
                android:layout_weight="2"/>
            <TextView
                android:id="@+id/amTvCurrentLocationValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ActivityMain_DefaultCityName"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:shadowColor="#000000"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="10"
                android:layout_weight="2"/>
        </LinearLayout>
    </LinearLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:paddingTop="20dp"
        android:layout_weight="40">
        <ListView
            android:id="@+id/amLvCities"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:backgroundTint="@color/white"
            android:elevation="60dp"
            android:nestedScrollingEnabled="true">
        </ListView>
    </androidx.core.widget.NestedScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="end"
        android:paddingEnd="10dp"
        tools:ignore="RtlSymmetry">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/amFbPlus"
            android:src="@drawable/ic_floating_button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:backgroundTint="@color/white"
            tools:ignore="ContentDescription" />
    </LinearLayout>
</LinearLayout>