<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/atLLFullBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.TemperatureActivity">
    <LinearLayout
        android:id="@+id/atLlTopBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="2">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/atBtnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@drawable/img_back"
                android:backgroundTint="@color/white"
                android:foregroundTint="@color/white"
                android:layout_weight="2"
                android:layout_marginStart="4dp">
            </androidx.appcompat.widget.AppCompatButton>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="9"
            tools:ignore="NestedWeights">
            <TextView
                android:id="@+id/atTvTitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/ActivityTemperature_DefaultName"
                android:textSize="50sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:shadowColor="#000000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="20">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2">
                <TextView
                    android:id="@+id/atTvTemperature"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="60sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:shadowColor="#000000"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="20">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3">
                <ImageView
                    android:id="@+id/atIvTemperatureIcon"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    tools:ignore="ContentDescription">
                </ImageView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:padding="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:elevation="60dp"
            android:background="@drawable/rounded_box"
            android:backgroundTint="@color/white"
            android:alpha="0.9"
            tools:ignore="UselessParent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="2">
                <ImageView
                    android:id="@+id/atIvTempMax"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="8"
                    android:padding="8dp"
                    android:background="@drawable/ic_temp_max"
                    android:scaleX="0.5"
                    android:scaleY="0.6"
                    tools:ignore="ContentDescription,NestedWeights">
                </ImageView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2">
                    <TextView
                        android:id="@+id/atTvTempMaxView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:layout_gravity="start"
                        android:padding="8dp"
                        android:text="@string/ActivityTemperature_TempMaxLabel"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:gravity="center_vertical">
                    </TextView>
                    <TextView
                        android:id="@+id/atTvTempMaxValue"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center_vertical"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:padding="8dp">
                    </TextView>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="2">
                <ImageView
                    android:id="@+id/atIvTempMin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="8"
                    android:padding="8dp"
                    android:background="@drawable/ic_temp_min"
                    android:scaleX="0.5"
                    android:scaleY="0.6"
                    tools:ignore="ContentDescription,NestedWeights">
                </ImageView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2">
                    <TextView
                        android:id="@+id/atTvTempMinView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:layout_gravity="start"
                        android:padding="8dp"
                        android:text="@string/ActivityTemperature_TempMinLabel"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:gravity="center_vertical">
                    </TextView>
                    <TextView
                        android:id="@+id/atTvTempMinValue"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center_vertical"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:padding="8dp">
                    </TextView>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="2">
                <ImageView
                    android:id="@+id/atIvWind"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="8"
                    android:padding="8dp"
                    android:background="@drawable/ic_wind"
                    android:scaleX="0.5"
                    android:scaleY="0.6"
                    tools:ignore="ContentDescription,NestedWeights">
                </ImageView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2">
                    <TextView
                        android:id="@+id/atTvWindView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:layout_gravity="start"
                        android:padding="8dp"
                        android:text="@string/ActivityTemperature_WindLabel"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:gravity="center_vertical">
                    </TextView>
                    <TextView
                        android:id="@+id/atTvWindValue"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center_vertical"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:padding="8dp">
                    </TextView>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="2">
                <ImageView
                    android:id="@+id/atIvHumidity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="8"
                    android:padding="8dp"
                    android:background="@drawable/ic_humidity"
                    android:scaleX="0.5"
                    android:scaleY="0.6"
                    tools:ignore="ContentDescription,NestedWeights">
                </ImageView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2">
                    <TextView
                        android:id="@+id/atTvHumidityView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:layout_gravity="start"
                        android:padding="8dp"
                        android:text="@string/ActivityTemperature_HumidityLabel"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:gravity="center_vertical">
                    </TextView>
                    <TextView
                        android:id="@+id/atTvHumidityValue"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center_vertical"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:padding="8dp">
                    </TextView>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="2">
                <ImageView
                    android:id="@+id/atIvPressure"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="8"
                    android:padding="8dp"
                    android:background="@drawable/ic_pressure"
                    android:scaleX="0.4"
                    android:scaleY="0.5"
                    tools:ignore="ContentDescription,NestedWeights">
                </ImageView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2">
                    <TextView
                        android:id="@+id/atTvPressureView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:layout_gravity="start"
                        android:padding="8dp"
                        android:text="@string/ActivityTemperature_PressureLabel"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:gravity="center_vertical">
                    </TextView>
                    <TextView
                        android:id="@+id/atTvPressureValue"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center_vertical"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:padding="8dp">
                    </TextView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>